{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 100,
  "lineage": "69dfdfb5-3356-6267-4033-7cbb4b1bfe01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:539191530301:instance/i-071a5e39793157b15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071a5e39793157b15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gurpreet-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e302c0f427aa172",
            "private_dns": "ip-172-20-10-229.ec2.internal",
            "private_ip": "172.20.10.229",
            "public_ip": "54.161.206.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06fd809177268a31d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0512763ab6f493e39",
            "tags": {
              "Name": "Ansible-server"
            },
            "tags_all": {
              "Name": "Ansible-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5bca6b94a95d213"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:539191530301:instance/i-0e960baab176d35bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e960baab176d35bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gurpreet-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e293ff7346033576",
            "private_dns": "ip-172-20-10-157.ec2.internal",
            "private_ip": "172.20.10.157",
            "public_ip": "34.227.26.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be9578281e1dcebc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0512763ab6f493e39",
            "tags": {
              "Name": "Docker-server"
            },
            "tags_all": {
              "Name": "Docker-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5bca6b94a95d213"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:539191530301:instance/i-063b77dfb6f5ddc78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063b77dfb6f5ddc78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gurpreet-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06cc777fd722b8877",
            "private_dns": "ip-172-20-10-235.ec2.internal",
            "private_ip": "172.20.10.235",
            "public_ip": "44.211.62.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be07c1f514ece464",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0512763ab6f493e39",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5bca6b94a95d213"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:539191530301:instance/i-0a769c53302db556a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a769c53302db556a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "gurpreet-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b45f3df369fbc82d",
            "private_dns": "ip-172-20-10-41.ec2.internal",
            "private_ip": "172.20.10.41",
            "public_ip": "3.82.143.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043efee179cc9699c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0512763ab6f493e39",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5bca6b94a95d213"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mylab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:internet-gateway/igw-0a3833801ef46e470",
            "id": "igw-0a3833801ef46e470",
            "owner_id": "539191530301",
            "tags": {
              "Name": "mylab-igw"
            },
            "tags_all": {
              "Name": "mylab-igw"
            },
            "vpc_id": "vpc-0600bc36a354af7fc"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mylab-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:route-table/rtb-078ade7df03be6e00",
            "id": "rtb-078ade7df03be6e00",
            "owner_id": "539191530301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3833801ef46e470",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mylab-rtb"
            },
            "tags_all": {
              "Name": "mylab-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600bc36a354af7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mylab-assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c22c2186064a735",
            "route_table_id": "rtb-078ade7df03be6e00",
            "subnet_id": "subnet-0512763ab6f493e39"
          },
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_route_table.mylab-rtb",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mylab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:security-group/sg-0e5bca6b94a95d213",
            "description": "To allow inbound outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5bca6b94a95d213",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mylab-sg",
            "name_prefix": "",
            "owner_id": "539191530301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mylab-sg"
            },
            "tags_all": {
              "Name": "mylab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600bc36a354af7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:subnet/subnet-0512763ab6f493e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0512763ab6f493e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539191530301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-1"
            },
            "tags_all": {
              "Name": "mylab-subnet-1"
            },
            "vpc_id": "vpc-0600bc36a354af7fc"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:subnet/subnet-007e74acafff27b16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e74acafff27b16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539191530301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-2"
            },
            "tags_all": {
              "Name": "mylab-subnet-2"
            },
            "vpc_id": "vpc-0600bc36a354af7fc"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mylab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539191530301:vpc/vpc-0600bc36a354af7fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0175c2e4db8f0c68f",
            "default_route_table_id": "rtb-0c16463e25f1120e5",
            "default_security_group_id": "sg-0b026681a9da4d164",
            "dhcp_options_id": "dopt-00e4808031e0a6c75",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0600bc36a354af7fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c16463e25f1120e5",
            "owner_id": "539191530301",
            "tags": {
              "Name": "mylab-vpc"
            },
            "tags_all": {
              "Name": "mylab-vpc"
            }
          }
        }
      ]
    }
  ]
}